# dc5-marine-biodiversity-prediction

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile.debug  devcontainer.json  docker-compose.yml  environment.yml
dc5/: __init__.py  evaluate.py
dc5/config/: __init__.py  dc5.yaml
dc5/evaluation/: __init__.py  evaluation.py
docker/: Dockerfile  README.md  environment.yml  mamba-shell
docs/source/: conf.py  index.md
docs/source/_templates/_templates/: custom-class-template.rst
docs/source/content/: data.md  leaderboard.md  metrics.md  references.md  submissions.md  task.md
notebooks/: test.ipynb
